examples/invalid/test05.alice
x was a Number and y was a Number.
